--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <!-- app.component.html -->
-<div class="main-container">
-  <router-outlet></router-outlet> <!-- This will display the Home component based on the routing setup -->
-</div>
+<app-navbar></app-navbar> <!-- This includes the navbar at the top of every page -->
+<router-outlet></router-outlet> <!-- This directive will handle the display of components based on the route -->
