--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,12 +12,19 @@
           <li class="nav-item">
             <a class="nav-link" href="/books">Books</a>
           </li>
+          <li class="nav-item" *ngIf="isLoggedIn">
+            <a class="nav-link" href="/cart">Cart</a>
+          </li>
+          <li class="nav-item" *ngIf="isLoggedIn">
+            <a class="nav-link" href="/admin">Admin</a>
+          </li>
         </ul>
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/cart">
-              🛒 Cart <span class="cart-count">{{ cartCount }}</span>
-            </a>
+          <li class="nav-item" *ngIf="!isLoggedIn">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+          <li class="nav-item" *ngIf="isLoggedIn">
+            <button class="btn btn-outline-light btn-sm" (click)="logout()">Logout</button>
           </li>
         </ul>
       </div>
